--- a/XfOrientation/XfOrientation/XfOrientation.Droid/packages.config
+++ b/XfOrientation/XfOrientation/XfOrientation.Droid/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Xam.Plugins.Forms.DeviceOrientation" version="1.0.1" targetFramework="monoandroid51" />
-  <package id="Xamarin.Android.Support.v4" version="21.0.3.0" targetFramework="monoandroid51" />
-  <package id="Xamarin.Forms" version="1.4.4.6392" targetFramework="monoandroid51" />
+  <package id="Xamarin.Android.Support.v4" version="22.2.1.0" targetFramework="MonoAndroid51" />
+  <package id="Xamarin.Forms" version="1.5.0.6446" targetFramework="MonoAndroid51" />
 </packages>
