--- a/XfOrientation/XfOrientation/XfOrientation/XfOrientation.csproj
+++ b/XfOrientation/XfOrientation/XfOrientation/XfOrientation.csproj
@@ -35,6 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Views\BaseContentPage.cs" />
     <Compile Include="Views\ComplimentaryLayoutPage.xaml.cs">
       <DependentUpon>ComplimentaryLayoutPage.xaml</DependentUpon>
     </Compile>
@@ -118,12 +119,14 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Images\spaceballs.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </EmbeddedResource>
+    <EmbeddedResource Include="Images\BigLebowski_poster.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Images\BigLebowski_poster.jpg" />
+    <EmbeddedResource Include="Images\Spaceballs_poster.jpg" />
+    <EmbeddedResource Include="Images\SpinalTap_poster.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Images\DrStrangelove_poster.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.1.5.0.6446\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.1.5.0.6446\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
