--- a/XfOrientation/XfOrientation/XfOrientation.iOS/Info.plist
+++ b/XfOrientation/XfOrientation/XfOrientation.iOS/Info.plist
@@ -45,6 +45,11 @@
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+
+	<key>NSAppTransportSecurity</key>  
+     <dict>  
+          <key>NSAllowsArbitraryLoads</key><true/>  
+     </dict> 
 	<key>CFBundleShortVersionString</key>
 	<string></string>
 </dict>
